--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
   <name>test</name>
   <dependencies>
       <dependency>
-        <groupId>com.hazelcast</groupId>
-        <artifactId>hazelcast</artifactId>
-        <version>3.2-SNAPSHOT</version>
-    </dependency>
+          <groupId>com.hazelcast</groupId>
+          <artifactId>hazelcast</artifactId>
+          <version>3.2-RC2-SNAPSHOT</version>
+      </dependency>
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <scope>test</scope>
+          <scope>compile</scope>
           <version>4.11</version>
       </dependency>
   </dependencies>
